更新layui版本和调整页面鉴权

--- a/etu_df_mapp/django/4.2.16/frontend/templates/common/base.html
+++ b/etu_df_mapp/django/4.2.16/frontend/templates/common/base.html
@@ -18,14 +18,12 @@
 
 {% include 'common/footer.html' %}
 
-{#<script>#}
-{#  layui.use([], function () {#}
-{#    let session_key = '{{ request.cookies.session_key }}'#}
-{#    if (!session_key) {#}
-{#      window.location.href = "{% url 'cas_ng_login' %}"#}
-{#    }#}
-{#  });#}
-{#</script>#}
+<script>
+  layui.use(['xiezhiMod'], function () {
+    let xiezhiMod = layui.xiezhiMod;
+    xiezhiMod.checkSessionKey('{{ request.COOKIES.session_key }}', "{% url 'login' %}");
+  });
+</script>
 {% block script %}
 
 {% endblock %}
